tests/fail/turkce-olmayan-tanim-eylem.kip
(bu tam-sayıyı) keflemek,
  budur.
